--- a/plugins/orders/CMakeLists.txt
+++ b/plugins/orders/CMakeLists.txt
@@ -7,7 +7,9 @@ set(CMAKE_AUTOMOC ON)
 
 # Find dependencies
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick)
-find_package(MPF REQUIRED)
+
+# SDK (header-only, direct path)
+set(MPF_SDK_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../foundation-sdk")
 
 # Plugin library
 add_library(orders-plugin SHARED
@@ -21,6 +23,7 @@ add_library(orders-plugin SHARED
 
 target_include_directories(orders-plugin PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${MPF_SDK_DIR}/include
 )
 
 target_link_libraries(orders-plugin PRIVATE
@@ -28,7 +31,6 @@ target_link_libraries(orders-plugin PRIVATE
     Qt6::Gui
     Qt6::Qml
     Qt6::Quick
-    MPF::foundation-sdk
 )
 
 # QML module embedded in plugin
