feat: implement orders management plugin with QML integration
- Added a new rules plugin for order management, including service and model implementations.
- Introduced QML components for creating, viewing, and managing orders.
- Implemented an OrdersService for CRUD operations and order status management.
- Created OrderModel to expose order data to QML.
- Added UI components for order creation and detail views, enhancing user interaction.
- Configured CMake for the new plugin and its dependencies.

--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -88,6 +88,10 @@ set_target_properties(mpf-host PROPERTIES
 # Create plugins directory
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/plugins)
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/qml)
+file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/config)
+
+# Copy default config files to build output
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config/ DESTINATION ${CMAKE_BINARY_DIR}/config)
 
 # Install
 install(TARGETS mpf-host
@@ -96,4 +100,8 @@ install(TARGETS mpf-host
 
 install(DIRECTORY ${CMAKE_BINARY_DIR}/qml/
     DESTINATION qml
+)
+
+install(DIRECTORY ${CMAKE_BINARY_DIR}/config/
+    DESTINATION config
 )
