feat: add contributing guidelines and enhance documentation
- Introduced a new CONTRIBUTING.md file outlining the collaborative workflow for multi-repository development.
- Updated README.md to reference the new contributing guidelines.
- Enhanced build instructions and runtime verification steps across various documentation files.
- Added scripts for SDK installation and runtime DLL synchronization to streamline the development process.
- Improved CMake configurations for plugins and libraries to ensure better integration and usability.

--- a/foundation-sdk/cmake/MPFConfig.cmake.in
+++ b/foundation-sdk/cmake/MPFConfig.cmake.in
@@ -7,4 +7,14 @@ if(NOT TARGET MPF::foundation-sdk)
     add_library(MPF::foundation-sdk ALIAS MPF::mpf-foundation-sdk)
 endif()
 
+if(NOT TARGET MPF::all)
+    add_library(MPF::all INTERFACE)
+    target_link_libraries(MPF::all INTERFACE MPF::foundation-sdk)
+
+    find_package(MPFHttpClient QUIET)
+    if(TARGET MPF::http-client)
+        target_link_libraries(MPF::all INTERFACE MPF::http-client)
+    endif()
+endif()
+
 check_required_components(MPF)
