--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -8,8 +8,8 @@ set(CMAKE_AUTOMOC ON)
 # Find dependencies
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick)
 
-# SDK (header-only, direct path)
-set(MPF_SDK_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../foundation-sdk")
+# SDK (installed via CMAKE_PREFIX_PATH)
+find_package(MPF REQUIRED)
 
 # Generate version header
 configure_file(
@@ -55,7 +55,6 @@ add_executable(mpf-host
 target_include_directories(mpf-host PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/include
     ${CMAKE_CURRENT_BINARY_DIR}/include
-    ${MPF_SDK_DIR}/include
 )
 
 target_link_libraries(mpf-host PRIVATE
@@ -63,6 +62,7 @@ target_link_libraries(mpf-host PRIVATE
     Qt6::Gui
     Qt6::Qml
     Qt6::Quick
+    MPF::foundation-sdk
 )
 
 # QML module
