--- a/plugins/orders/CMakeLists.txt
+++ b/plugins/orders/CMakeLists.txt
@@ -8,8 +8,8 @@ set(CMAKE_AUTOMOC ON)
 # Find dependencies
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick)
 
-# SDK (header-only, direct path)
-set(MPF_SDK_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../foundation-sdk")
+# SDK (installed via CMAKE_PREFIX_PATH)
+find_package(MPF REQUIRED)
 
 # Plugin library
 add_library(orders-plugin SHARED
@@ -23,7 +23,6 @@ add_library(orders-plugin SHARED
 
 target_include_directories(orders-plugin PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/include
-    ${MPF_SDK_DIR}/include
 )
 
 target_link_libraries(orders-plugin PRIVATE
@@ -31,6 +30,7 @@ target_link_libraries(orders-plugin PRIVATE
     Qt6::Gui
     Qt6::Qml
     Qt6::Quick
+    MPF::foundation-sdk
 )
 
 # QML module embedded in plugin
