--- a/libs/http-client/cmake/MPFHttpClientConfig.cmake.in
+++ b/libs/http-client/cmake/MPFHttpClientConfig.cmake.in
@@ -1,3 +1,7 @@
 @PACKAGE_INIT@
 
 include("${CMAKE_CURRENT_LIST_DIR}/MPFHttpClientTargets.cmake")
+
+# Register this component for MPF::bundle auto-discovery
+# Store target name in a global property for bundle to collect
+set_property(GLOBAL APPEND PROPERTY MPF_COMPONENT_TARGETS "MPF::http-client")
