feat: 跨平台开发环境支持
修复问题:
- CMakePresets.json 使用环境变量替代硬编码路径
- paths.json 支持环境变量展开 (${VAR}, %VAR%)
- 添加 Qt policy 设置消除警告

新增文件:
- scripts/build-all.sh - Linux/macOS 一键构建脚本
- scripts/setup-env.sh - Linux/macOS 环境设置脚本
- scripts/setup-env.ps1 - Windows 环境设置脚本
- DEVELOPMENT.md - 详尽的开发者合作指南
- CMakeUserPresets.json.example - 用户自定义 preset 模板
- host/config/paths.json.example - 路径配置模板

改进:
- 支持相对路径 (相对于配置文件目录)
- 支持跨平台 preset (linux/windows/macos)
- 更新 .gitignore

--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -8,6 +8,12 @@ set(CMAKE_AUTOMOC ON)
 # Find dependencies
 find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick)
 
+# Set Qt policies to avoid warnings
+if(COMMAND qt_policy)
+    qt_policy(SET QTP0001 NEW)  # QML resource prefix
+    qt_policy(SET QTP0004 NEW)  # qmldir for extra directories
+endif()
+
 # SDK (installed via CMAKE_PREFIX_PATH)
 find_package(MPF REQUIRED)
 
