--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Build outputs
 build/
 *.o
 *.so
@@ -5,15 +6,29 @@ build/
 *.dylib
 *.a
 *.lib
+
+# Qt generated files
 moc_*
 qrc_*
 *_autogen/
+.qt/
+.qmlls.ini
+
+# CMake
 CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
 Makefile
-.qt/
+compile_commands.json
+
+# IDE
 **/**/.qtcreator/
 .cache/
 .vscode/
-.qmlls.ini
+.idea/
+*.user
+*.user.*
+
+# Local config (use .example files as templates)
+# Note: paths.json is tracked for reference; developers may override locally
+CMakeUserPresets.json
